--- a/MINDD_TP01.ipynb
+++ b/MINDD_TP01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNUYn1L3ckZ0gpXnGC1Kq23",
+      "authorship_tag": "ABX9TyNIwFB1Lh0aoqOnQxwgGVVI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -225,10 +225,111 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## TP01_D\n",
+        "d) View prices for the last three cities: Beja, Évora, and Faro."
+      ],
+      "metadata": {
+        "id": "IETrnhPifv1T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "last_three_cities = prcSerie[[\"Beja\", \"Évora\", \"Faro\"]]\n",
+        "last_three_cities_iloc = prcSerie.iloc[-3:]\n",
+        "print(last_three_cities)\n",
+        "print(\"----------- iloc------------\")\n",
+        "print(last_three_cities_iloc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QuE-roYcWUij",
+        "outputId": "ddb31c10-b6d3-4281-824a-dfe8cbf40b56"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Beja     10.9\n",
+            "Évora    11.4\n",
+            "Faro      9.1\n",
+            "Name: Preço, dtype: float64\n",
+            "----------- iloc------------\n",
+            "Beja     10.9\n",
+            "Évora    11.4\n",
+            "Faro      9.1\n",
+            "Name: Preço, dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## TP01_E\n",
+        "e) View prices in the cities: Aveiro, Coimbra, Leiria, and Lisbon."
+      ],
+      "metadata": {
+        "id": "R8fI85Mfb-VO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cities_columns = prcSerie[[\"Aveiro\",\"Coimbra\", \"Leiria\",\"Lisboa\"]]\n",
+        "cities_loc = prcSerie.loc[[\"Aveiro\",\"Coimbra\", \"Leiria\",\"Lisboa\"]]\n",
+        "cities_iloc = prcSerie.iloc[3:7]\n",
+        "print(cities_columns)\n",
+        "print(\"----------- loc------------\")\n",
+        "print(cities_loc)\n",
+        "print(\"----------- iloc------------\")\n",
+        "print(cities_iloc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eFEKYe-Dc7qo",
+        "outputId": "f9357451-7e14-45df-d69f-e52af9a54c52"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aveiro     12.3\n",
+            "Coimbra     9.9\n",
+            "Leiria      9.3\n",
+            "Lisboa     12.1\n",
+            "Name: Preço, dtype: float64\n",
+            "----------- loc------------\n",
+            "Aveiro     12.3\n",
+            "Coimbra     9.9\n",
+            "Leiria      9.3\n",
+            "Lisboa     12.1\n",
+            "Name: Preço, dtype: float64\n",
+            "----------- iloc------------\n",
+            "Aveiro     12.3\n",
+            "Coimbra     9.9\n",
+            "Leiria      9.3\n",
+            "Lisboa     12.1\n",
+            "Name: Preço, dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "QuE-roYcWUij"
+        "id": "6UxPKKxdgPP4"
       },
       "execution_count": null,
       "outputs": []
