--- a/MINDD_TP01.ipynb
+++ b/MINDD_TP01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIwFB1Lh0aoqOnQxwgGVVI",
+      "authorship_tag": "ABX9TyOJRJa6PXZlzi7iFNEbOgn9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,9 +97,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iwcwn9hkt1ic",
-        "outputId": "d37bd7f4-d5f3-4fd7-88df-90a90e6495eb"
+        "outputId": "50b25c23-69d6-49cd-ba4b-fe6fc96837b5"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,10 +326,56 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## TP01_F\n",
+        "f) Which cities have lower than average prices?"
+      ],
+      "metadata": {
+        "id": "Eyr74EWf6rP6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate the average price\n",
+        "average_price = prcSerie.mean()\n",
+        "\n",
+        "# Find cities with prices lower than the average\n",
+        "lower_than_average = prcSerie[prcSerie < average_price]\n",
+        "\n",
+        "print(\"Cities with prices lower than the average:\")\n",
+        "print(lower_than_average)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6UxPKKxdgPP4",
+        "outputId": "42f3aeda-89a4-4598-cc67-88a408678e13"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cities with prices lower than the average:\n",
+            "Bragança    10.3\n",
+            "Braga       10.6\n",
+            "Coimbra      9.9\n",
+            "Leiria       9.3\n",
+            "Faro         9.1\n",
+            "Name: Preço, dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "6UxPKKxdgPP4"
+        "id": "-TIqTrE15wq-"
       },
       "execution_count": null,
       "outputs": []
