--- a/MINDD_PL02.ipynb
+++ b/MINDD_PL02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7jeO0TyF0wUibbQof+83E",
+      "authorship_tag": "ABX9TyPka3AzZY6bWEXC5WdB93BX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,424 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "vWDJ9dBtqM6L"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 590
+        },
+        "id": "vWDJ9dBtqM6L",
+        "outputId": "0f019954-057a-4a46-8d4e-fb1637aa9fe5"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "       Username TitleCli         Name                         Address Country  \\\n",
+              "0  user_1000884    MRS    DORIS126855  89594388-Boris Road-Doris Town     USA   \n",
+              "1  user_1009862    MRS     DORIS42531  75844730-Boris Road-Doris Town      UK   \n",
+              "2  user_1025298   MISS    DORIS136770  39704306-Boris Road-Doris Town      UK   \n",
+              "3  user_1039001      MR   BORIS111529  46627181-Boris Road-Doris Town     NaN   \n",
+              "4  user_1040891    MRS    DORIS142154  82645107-Boris Road-Doris Town     USA   \n",
+              "\n",
+              "  Gender   Age Favourites           Order_ID  Product_ID      Style  \\\n",
+              "0      F  27.0  Adventure  Order_ID_25002281        1048     Comedy   \n",
+              "1      F  36.0   Children  Order_ID_11048478        1060  Children    \n",
+              "2      F  38.0   Children  Order_ID_62493972        1062  Children    \n",
+              "3    NaN   NaN        NaN  Order_ID_40324890        1048     Comedy   \n",
+              "4      F  25.0  Adventure  Order_ID_79222013        1013     Comedy   \n",
+              "\n",
+              "                          Film_Title  Price PurchTime   PurchDate Buy_for  \n",
+              "0                 This was Tinny Sap   9.99  23:50:02  25/02/2001  Myself  \n",
+              "1                        The Buppets   5.99  23:40:18  22/02/2001  Family  \n",
+              "2                    Bogus the Clown   5.99  08:37:27  21/02/2001  Family  \n",
+              "3                 This was Tinny Sap   9.99  20:17:16  25/02/2001     NaN  \n",
+              "4  Dr OddBloke or: What bomb? Where?  15.99  21:12:49  22/02/2001  Myself  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-7ac7b238-ad80-4549-95e5-52a62030a96b\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Username</th>\n",
+              "      <th>TitleCli</th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Address</th>\n",
+              "      <th>Country</th>\n",
+              "      <th>Gender</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Favourites</th>\n",
+              "      <th>Order_ID</th>\n",
+              "      <th>Product_ID</th>\n",
+              "      <th>Style</th>\n",
+              "      <th>Film_Title</th>\n",
+              "      <th>Price</th>\n",
+              "      <th>PurchTime</th>\n",
+              "      <th>PurchDate</th>\n",
+              "      <th>Buy_for</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>user_1000884</td>\n",
+              "      <td>MRS</td>\n",
+              "      <td>DORIS126855</td>\n",
+              "      <td>89594388-Boris Road-Doris Town</td>\n",
+              "      <td>USA</td>\n",
+              "      <td>F</td>\n",
+              "      <td>27.0</td>\n",
+              "      <td>Adventure</td>\n",
+              "      <td>Order_ID_25002281</td>\n",
+              "      <td>1048</td>\n",
+              "      <td>Comedy</td>\n",
+              "      <td>This was Tinny Sap</td>\n",
+              "      <td>9.99</td>\n",
+              "      <td>23:50:02</td>\n",
+              "      <td>25/02/2001</td>\n",
+              "      <td>Myself</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>user_1009862</td>\n",
+              "      <td>MRS</td>\n",
+              "      <td>DORIS42531</td>\n",
+              "      <td>75844730-Boris Road-Doris Town</td>\n",
+              "      <td>UK</td>\n",
+              "      <td>F</td>\n",
+              "      <td>36.0</td>\n",
+              "      <td>Children</td>\n",
+              "      <td>Order_ID_11048478</td>\n",
+              "      <td>1060</td>\n",
+              "      <td>Children</td>\n",
+              "      <td>The Buppets</td>\n",
+              "      <td>5.99</td>\n",
+              "      <td>23:40:18</td>\n",
+              "      <td>22/02/2001</td>\n",
+              "      <td>Family</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>user_1025298</td>\n",
+              "      <td>MISS</td>\n",
+              "      <td>DORIS136770</td>\n",
+              "      <td>39704306-Boris Road-Doris Town</td>\n",
+              "      <td>UK</td>\n",
+              "      <td>F</td>\n",
+              "      <td>38.0</td>\n",
+              "      <td>Children</td>\n",
+              "      <td>Order_ID_62493972</td>\n",
+              "      <td>1062</td>\n",
+              "      <td>Children</td>\n",
+              "      <td>Bogus the Clown</td>\n",
+              "      <td>5.99</td>\n",
+              "      <td>08:37:27</td>\n",
+              "      <td>21/02/2001</td>\n",
+              "      <td>Family</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>user_1039001</td>\n",
+              "      <td>MR</td>\n",
+              "      <td>BORIS111529</td>\n",
+              "      <td>46627181-Boris Road-Doris Town</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Order_ID_40324890</td>\n",
+              "      <td>1048</td>\n",
+              "      <td>Comedy</td>\n",
+              "      <td>This was Tinny Sap</td>\n",
+              "      <td>9.99</td>\n",
+              "      <td>20:17:16</td>\n",
+              "      <td>25/02/2001</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>user_1040891</td>\n",
+              "      <td>MRS</td>\n",
+              "      <td>DORIS142154</td>\n",
+              "      <td>82645107-Boris Road-Doris Town</td>\n",
+              "      <td>USA</td>\n",
+              "      <td>F</td>\n",
+              "      <td>25.0</td>\n",
+              "      <td>Adventure</td>\n",
+              "      <td>Order_ID_79222013</td>\n",
+              "      <td>1013</td>\n",
+              "      <td>Comedy</td>\n",
+              "      <td>Dr OddBloke or: What bomb? Where?</td>\n",
+              "      <td>15.99</td>\n",
+              "      <td>21:12:49</td>\n",
+              "      <td>22/02/2001</td>\n",
+              "      <td>Myself</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7ac7b238-ad80-4549-95e5-52a62030a96b')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-7ac7b238-ad80-4549-95e5-52a62030a96b button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-7ac7b238-ad80-4549-95e5-52a62030a96b');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "<div id=\"df-f0d88076-0249-4525-adf2-19a75b87c21b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f0d88076-0249-4525-adf2-19a75b87c21b')\"\n",
+              "            title=\"Suggest charts.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "  </button>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "      --bg-color: #E8F0FE;\n",
+              "      --fill-color: #1967D2;\n",
+              "      --hover-bg-color: #E2EBFA;\n",
+              "      --hover-fill-color: #174EA6;\n",
+              "      --disabled-fill-color: #AAA;\n",
+              "      --disabled-bg-color: #DDD;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "      --bg-color: #3B4455;\n",
+              "      --fill-color: #D2E3FC;\n",
+              "      --hover-bg-color: #434B5C;\n",
+              "      --hover-fill-color: #FFFFFF;\n",
+              "      --disabled-bg-color: #3B4455;\n",
+              "      --disabled-fill-color: #666;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: var(--bg-color);\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: var(--fill-color);\n",
+              "    height: 32px;\n",
+              "    padding: 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: var(--hover-bg-color);\n",
+              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: var(--button-hover-fill-color);\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart-complete:disabled,\n",
+              "  .colab-df-quickchart-complete:disabled:hover {\n",
+              "    background-color: var(--disabled-bg-color);\n",
+              "    fill: var(--disabled-fill-color);\n",
+              "    box-shadow: none;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-spinner {\n",
+              "    border: 2px solid var(--fill-color);\n",
+              "    border-color: transparent;\n",
+              "    border-bottom-color: var(--fill-color);\n",
+              "    animation:\n",
+              "      spin 1s steps(1) infinite;\n",
+              "  }\n",
+              "\n",
+              "  @keyframes spin {\n",
+              "    0% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "      border-left-color: var(--fill-color);\n",
+              "    }\n",
+              "    20% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    30% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    40% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    60% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    80% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "    90% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "  <script>\n",
+              "    async function quickchart(key) {\n",
+              "      const quickchartButtonEl =\n",
+              "        document.querySelector('#' + key + ' button');\n",
+              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "      try {\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      } catch (error) {\n",
+              "        console.error('Error during call to suggestCharts:', error);\n",
+              "      }\n",
+              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "    }\n",
+              "    (() => {\n",
+              "      let quickchartButtonEl =\n",
+              "        document.querySelector('#df-f0d88076-0249-4525-adf2-19a75b87c21b button');\n",
+              "      quickchartButtonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "    })();\n",
+              "  </script>\n",
+              "</div>\n",
+              "    </div>\n",
+              "  </div>\n"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "%matplotlib inline\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import folium\n",
+        "\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "df = pd.read_csv('drive/My Drive/MINDD/week_purchases18-25.txt', sep='\\t')\n",
+        "df.head()\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "y3GLPPiBsYaz"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
