--- a/MINDD_PL02.ipynb
+++ b/MINDD_PL02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPka3AzZY6bWEXC5WdB93BX",
+      "authorship_tag": "ABX9TyPZFE8bivF0SWowcvjCjtpf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +27,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 1. Start to load the dataset week_purchases18-25.txt into R session and next:"
+      ],
+      "metadata": {
+        "id": "WB3lREJnuYK1"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 590
         },
         "id": "vWDJ9dBtqM6L",
-        "outputId": "0f019954-057a-4a46-8d4e-fb1637aa9fe5"
+        "outputId": "ea81d5e2-969f-4d23-ad0a-dced4e47dbd7"
       },
       "outputs": [
         {
@@ -72,7 +81,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7ac7b238-ad80-4549-95e5-52a62030a96b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-cdcd7a33-1961-40cf-80eb-7fe66e666c2f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -211,7 +220,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7ac7b238-ad80-4549-95e5-52a62030a96b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cdcd7a33-1961-40cf-80eb-7fe66e666c2f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -263,12 +272,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7ac7b238-ad80-4549-95e5-52a62030a96b button.colab-df-convert');\n",
+              "        document.querySelector('#df-cdcd7a33-1961-40cf-80eb-7fe66e666c2f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7ac7b238-ad80-4549-95e5-52a62030a96b');\n",
+              "        const element = document.querySelector('#df-cdcd7a33-1961-40cf-80eb-7fe66e666c2f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -288,8 +297,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f0d88076-0249-4525-adf2-19a75b87c21b\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f0d88076-0249-4525-adf2-19a75b87c21b')\"\n",
+              "<div id=\"df-eed08800-0454-4aa1-8f10-b52f3c7d566f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-eed08800-0454-4aa1-8f10-b52f3c7d566f')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -408,7 +417,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f0d88076-0249-4525-adf2-19a75b87c21b button');\n",
+              "        document.querySelector('#df-eed08800-0454-4aa1-8f10-b52f3c7d566f button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -419,7 +428,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 20
         }
       ],
       "source": [
@@ -440,9 +449,164 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# a. check its size\n",
+        "print(df.shape)\n",
+        "print(\"Linhas\", df.shape[0])\n",
+        "print(\"Colunas\", df.shape[1])\n",
+        "print(df.columns.to_list())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y3GLPPiBsYaz",
+        "outputId": "93e399c7-d38d-44ad-eede-8eb39eab08e0"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(739, 16)\n",
+            "Linhas 739\n",
+            "Colunas 16\n",
+            "['Username', 'TitleCli', 'Name', 'Address', 'Country', 'Gender', 'Age', 'Favourites', 'Order_ID', 'Product_ID', 'Style', 'Film_Title', 'Price', 'PurchTime', 'PurchDate', 'Buy_for']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# b. get a summary of data\n",
+        "print(df.describe())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hpCok46AvEE3",
+        "outputId": "05408c3c-b1c3-4eeb-cb94-d52d2a48e4a5"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              Age   Product_ID       Price\n",
+            "count  444.000000   739.000000  739.000000\n",
+            "mean    43.182432  1039.170501    8.742368\n",
+            "std     14.657891    17.813339    2.879627\n",
+            "min     21.000000  1001.000000    5.990000\n",
+            "25%     32.000000  1024.000000    5.990000\n",
+            "50%     37.000000  1042.000000    7.990000\n",
+            "75%     58.000000  1056.000000    9.990000\n",
+            "max     75.000000  1062.000000   15.990000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# c. check which columns are numeric and which are categorical\n",
+        "df.dtypes\n",
+        "# convert age float64 to integer\n",
+        "df['Age'] = df['Age'].fillna(0).astype(int) # fillna(0) put 0 in missing values\n",
+        "# purchase time objetc to time\n",
+        "#df['PurchTime'] = pd.to_datetime(df['PurchTime'])\n",
+        "# Converting date objetc to datetime\n",
+        "df['PurchDate'] = pd.to_datetime(df['PurchDate'])\n",
+        "df.dtypes"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "spe_Rxxd7ocR",
+        "outputId": "cdeda6e9-5f83-4c4c-c543-9a86db467fd3"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Username              object\n",
+              "TitleCli              object\n",
+              "Name                  object\n",
+              "Address               object\n",
+              "Country               object\n",
+              "Gender                object\n",
+              "Age                    int64\n",
+              "Favourites            object\n",
+              "Order_ID              object\n",
+              "Product_ID             int64\n",
+              "Style                 object\n",
+              "Film_Title            object\n",
+              "Price                float64\n",
+              "PurchTime             object\n",
+              "PurchDate     datetime64[ns]\n",
+              "Buy_for               object\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# d. check for missing data by rows and by columns\n",
+        "df.isnull().sum(axis = 0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KOS5GxvF7uzK",
+        "outputId": "41979580-d07f-414b-a56a-ac2eaa330611"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Username        0\n",
+              "TitleCli        0\n",
+              "Name            0\n",
+              "Address         0\n",
+              "Country       295\n",
+              "Gender        295\n",
+              "Age             0\n",
+              "Favourites    295\n",
+              "Order_ID        0\n",
+              "Product_ID      0\n",
+              "Style           0\n",
+              "Film_Title      0\n",
+              "Price           0\n",
+              "PurchTime       0\n",
+              "PurchDate       0\n",
+              "Buy_for       295\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "y3GLPPiBsYaz"
+        "id": "DWU9ycNUApaO"
       },
       "execution_count": null,
       "outputs": []
